--- a/Healthcare.AppointmentSystem/Healthcare.Adapters/Healthcare.Adapters.csproj
+++ b/Healthcare.AppointmentSystem/Healthcare.Adapters/Healthcare.Adapters.csproj
@@ -1,19 +1,26 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="MailKit" Version="4.14.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<!-- Email Support -->
+		<PackageReference Include="MailKit" Version="4.14.1" />
 
-  <ItemGroup>
-    <ProjectReference Include="..\Healthcare.Application\Healthcare.Application.csproj" />
-    <ProjectReference Include="..\Healthcare.Domain\Healthcare.Domain.csproj" />
-  </ItemGroup>
+		<!-- Dependency Injection (FULL, not just Abstractions) -->
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+
+		<!-- Logging (REQUIRED for ILogger<>) -->
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\Healthcare.Application\Healthcare.Application.csproj" />
+		<ProjectReference Include="..\Healthcare.Domain\Healthcare.Domain.csproj" />
+	</ItemGroup>
 
 </Project>
