--- a/Healthcare.AppointmentSystem/Healthcare.Adapters/Healthcare.Adapters.csproj
+++ b/Healthcare.AppointmentSystem/Healthcare.Adapters/Healthcare.Adapters.csproj
@@ -23,4 +23,16 @@
 		<ProjectReference Include="..\Healthcare.Domain\Healthcare.Domain.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<!-- Entity Framework Core -->
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0">
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
+	</ItemGroup>
+
 </Project>
