Implementuar JWT Authentication dhe User adapters
Ky commit implementon plotësisht Authentication layer në Adapters,
duke shtuar JWT-based authentication dhe menaxhimin e përdoruesve
sipas parimeve të Hexagonal Architecture.

Janë realizuar këto punë kryesore:

- Krijuar konfigurimi JwtSettings për menaxhimin e parametrave të JWT
  (Secret, Issuer, Audience, Expiration)

- Implementuar JwtAuthenticationService si Adapter që realizon
  IAuthenticationService nga Application Layer:
  - Regjistrim përdoruesi
  - Login me verifikim kredencialesh
  - Gjenerim dhe validim JWT token-ash
  - Logging për operacione kritike të sigurisë

- Implementuar BcryptPasswordHasher si Adapter për hashim dhe
  verifikim të sigurt të fjalëkalimeve (BCrypt)

- Krijuar InMemoryUserRepository si implementim i IUserRepository,
  për përdorim në development dhe testing

- Zgjeruar InMemoryUnitOfWork për të përfshirë User aggregate

- Përditësuar AdapterServiceExtensions për:
  - regjistrimin e User repository
  - regjistrimin e authentication services
  - konfigurimin e JwtSettings nga appsettings

- Konfiguruar JWT Authentication dhe Authorization në Program.cs,
  duke shtuar middleware për autentikim dhe autorizim

- Shtuar konfigurimet për JWT në appsettings.json

Ky implementim:
- respekton plotësisht Port & Adapter Pattern
- izolon logjikën e sigurisë nga Application dhe Domain layers
- është production-ready (JWT, BCrypt, DI, middleware)
- përgatit API-në për role-based access control (Patient, Doctor, Admin)

Rezultati:
Sistemi tani mbështet autentikim të sigurt me JWT, menaxhim të
përdoruesve dhe autorizim të avancuar, në nivel real dhe profesional.

--- a/Healthcare.AppointmentSystem/Healthcare.Presentation.API/appsettings.json
+++ b/Healthcare.AppointmentSystem/Healthcare.Presentation.API/appsettings.json
@@ -9,5 +9,13 @@
             "Microsoft.EntityFrameworkCore": "Information"
         }
     },
+    {
+        "Jwt": {
+            "Secret": "YourSuperSecretKeyThatMustBeAtLeast32CharactersLongForHS256!",
+            "Issuer": "HealthcareAPI",
+            "Audience": "HealthcareClients",
+            "ExpirationInMinutes": 60
+        }
+    },
     "AllowedHosts": "*"
 }
