--- a/Healthcare.AppointmentSystem/Healthcare.Adapters/Healthcare.Adapters.csproj
+++ b/Healthcare.AppointmentSystem/Healthcare.Adapters/Healthcare.Adapters.csproj
@@ -17,6 +17,9 @@
 
 		<!-- Logging (REQUIRED for ILogger<>) -->
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+		<PackageReference Include="StackExchange.Redis" Version="2.10.1" />
+		<PackageReference Include="StackExchange.Redis.Extensions.Core" Version="11.0.0" />
+		<PackageReference Include="StackExchange.Redis.Extensions.Newtonsoft" Version="11.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
