Konfigurim i Redis dhe integrim me Dependency Injection
U instalua Redis për development (Docker)

U shtuan konfigurimet Redis në appsettings.json dhe appsettings.Development.json

U krijua RedisSettings për konfigurim të centralizuar

U regjistrua Redis dhe RedisDistributedLockService në DI container

U përditësua Program.cs për të kaluar konfigurimin

U shtua Redis Health Check për monitorim të gjendjes së sistemit

--- a/Healthcare.AppointmentSystem/Healthcare.Presentation.API/appsettings.Development.json
+++ b/Healthcare.AppointmentSystem/Healthcare.Presentation.API/appsettings.Development.json
@@ -1,8 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Debug",
+            "Microsoft.AspNetCore": "Warning",
+            "Healthcare.Adapters.Locking": "Trace"
+        }
+    },
+
+    "Redis": {
+        "ConnectionString": "localhost:6379",
+        "InstanceName": "HealthcareApp:Dev:",
+        "DefaultLockExpirationSeconds": 30
     }
-  }
 }
