--- a/Healthcare.AppointmentSystem/Healthcare.Presentation.API/appsettings.json
+++ b/Healthcare.AppointmentSystem/Healthcare.Presentation.API/appsettings.json
@@ -1,13 +1,15 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=HealthcareDb;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true"
+        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=HealthcareDb;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true",
+        "Redis": "localhost:6379,abortConnect=false,connectTimeout=5000,syncTimeout=5000"
     },
 
     "Logging": {
         "LogLevel": {
             "Default": "Information",
             "Microsoft.AspNetCore": "Warning",
-            "Microsoft.EntityFrameworkCore": "Information"
+            "Microsoft.EntityFrameworkCore": "Information",
+            "Healthcare.Adapters.Locking": "Debug"
         }
     },
 
@@ -16,6 +18,11 @@
         "Issuer": "HealthcareAPI",
         "Audience": "HealthcareClients",
         "ExpirationInMinutes": 60
+    },
+    "Redis": {
+        "ConnectionString": "localhost:6379",
+        "InstanceName": "HealthcareApp:",
+        "DefaultLockExpirationSeconds": 30
     },
 
     "AllowedHosts": "*"
