--- a/Healthcare.AppointmentSystem/Healthcare.Adapters/Healthcare.Adapters.csproj
+++ b/Healthcare.AppointmentSystem/Healthcare.Adapters/Healthcare.Adapters.csproj
@@ -10,6 +10,7 @@
 		<!-- Email Support -->
 		<PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
 		<PackageReference Include="MailKit" Version="4.14.1" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="10.0.1" />
 
 		<!-- Dependency Injection (FULL, not just Abstractions) -->
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
