Konfiguruar integrimin e databazës dhe pagesave
Përditësuar appsettings me konfigurim Stripe,
regjistruar payment gateway në AdapterServiceExtensions,
shtuar event handlers për sukses, dështim dhe refund të pagesave,
dhe integruar handler-at në Program.cs për DI dhe event dispatching.

--- a/Healthcare.AppointmentSystem/Healthcare.Presentation.API/appsettings.json
+++ b/Healthcare.AppointmentSystem/Healthcare.Presentation.API/appsettings.json
@@ -24,6 +24,12 @@
         "InstanceName": "HealthcareApp:",
         "DefaultLockExpirationSeconds": 30
     },
+    "Stripe": {
+        "SecretKey": "sk_test_51AbCdEfGhIjKlMnOpQrStUvWxYz_REPLACE_WITH_YOUR_KEY",
+        "PublishableKey": "pk_test_51AbCdEfGhIjKlMnOpQrStUvWxYz_REPLACE_WITH_YOUR_KEY",
+        "WebhookSecret": "whsec_AbCdEfGhIjKlMnOpQrStUvWxYz_REPLACE_WITH_YOUR_SECRET",
+        "DefaultCurrency": "USD"
+    },
 
     "AllowedHosts": "*"
 }
